--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Treatedaer is an Independent company specialized on mechanical consulting. We are dedicated in providing an exceptional level of service to each and every one of our clients We gather requirements & evaluate based upon the options available. We adopt state-of-the-art technologies for both cooling and ventilation systems. We design our systems in such a way that it suits your space and matches your expectation."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Treatedaer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
